--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.3.3",
     "@headlessui/react": "^1.7.18",
+    "@prisma/client": "^5.9.1",
     "@radix-ui/react-select": "^2.0.0",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.323.0",
@@ -27,6 +29,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prisma": "^5.9.1",
+    "prisma-erd-generator": "^1.11.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
