--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^1.3.3",
     "@headlessui/react": "^1.7.18",
     "@prisma/client": "^5.9.1",
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.323.0",
