--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
     "@vercel/analytics": "^1.1.3",
+    "@vercel/speed-insights": "^1.0.9",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
