--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.3.3",
+    "@datadog/browser-rum": "^5.9.0",
     "@headlessui/react": "^1.7.18",
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-collapsible": "^1.0.3",
