fix: datadog configuration to reflect on client side

--- a/.env
+++ b/.env
@@ -6,3 +6,8 @@
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 ENV_NAME="Development"
+
+# Datadog configuration
+APPLICATION_ID='703566b5-f3a1-4a06-b09e-ffae241a6544'
+CLIENT_TOKEN='pub04930b66115c354dbd3e9a6478b0e2d0'
+DATADOG_SERVICE='next-the-coffee-class'
