--- a/.env
+++ b/.env
@@ -4,10 +4,15 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/the-coffee-class?schema=public"
 ENV_NAME="Development"
-
+NEXT_AUTH_SECRET="GOCSPX-cwvHuc2J4"
+NEXTAUTH_URL="http://localhost:3000"
 # Datadog configuration
 APPLICATION_ID='703566b5-f3a1-4a06-b09e-ffae241a6544'
 CLIENT_TOKEN='pub04930b66115c354dbd3e9a6478b0e2d0'
 DATADOG_SERVICE='next-the-coffee-class'
+
+# Google Provider
+GOOGLE_CLIENT_ID="1093410117805-v0aobapu3r4irrvf3tf1nnf532hrdvc3.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
