--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.5",
     "next-intl": "^3.5.4",
     "react": "^18",
     "react-dom": "^18",
